--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "private": true,
-  "name": "my-nextron-app",
-  "description": "My application description",
-  "version": "1.0.0",
-  "author": "Yoshihide Shiono <shiono.yoshihide@gmail.com>",
+  "name": "thunder-authenticator",
+  "description": "",
+  "version": "0.0.1",
   "main": "app/background.js",
   "scripts": {
     "dev": "nextron",
@@ -11,21 +10,22 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
-    "electron-serve": "^1.3.0",
+    "electron-serve": "^3.0.0",
     "electron-store": "^8.2.0"
   },
   "devDependencies": {
-    "@types/node": "^20.11.16",
-    "@types/react": "^18.2.52",
-    "autoprefixer": "^10.4.19",
-    "electron": "^34.0.0",
-    "electron-builder": "^24.13.3",
-    "next": "^14.2.4",
+    "@tailwindcss/postcss": "^4.1.14",
+    "@types/node": "^24.8.1",
+    "@types/react": "^19.2.2",
+    "autoprefixer": "^10.4.21",
+    "electron": "^38.3.0",
+    "electron-builder": "^26.0.12",
+    "next": "^15.5.6",
     "nextron": "^9.5.0",
-    "postcss": "^8.4.38",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.7.3"
+    "postcss": "^8.5.6",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "tailwindcss": "^4.1.14",
+    "typescript": "^5.9.3"
   }
 }
