--- a/package.json
+++ b/package.json
@@ -7,19 +7,27 @@
   "scripts": {
     "dev": "nextron",
     "build": "nextron build",
-    "postinstall": "electron-builder install-app-deps"
+    "postinstall": "electron-builder install-app-deps",
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
+    "lint:fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix"
   },
   "dependencies": {
     "electron-serve": "^3.0.0",
     "electron-store": "^8.2.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@next/eslint-plugin-next": "^15.5.6",
     "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "^24.8.1",
     "@types/react": "^19.2.2",
+    "@typescript-eslint/eslint-plugin": "^8.46.1",
+    "@typescript-eslint/parser": "^8.46.1",
     "autoprefixer": "^10.4.21",
     "electron": "^38.3.0",
     "electron-builder": "^26.0.12",
+    "eslint": "^9.38.0",
+    "eslint-config-next": "^15.5.6",
     "next": "^15.5.6",
     "nextron": "^9.5.0",
     "postcss": "^8.5.6",
