--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "private": true,
   "name": "thunder-authenticator",
-  "description": "",
+  "description": "A Desktop Authenticator and account manager for Steam",
   "version": "0.0.1",
+  "author": "ZeusJunior",
   "main": "app/background.js",
   "scripts": {
     "dev": "nextron",
