--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "^24.8.1",
     "@types/react": "^19.2.2",
+    "@types/steamcommunity": "^3.43.8",
     "@typescript-eslint/eslint-plugin": "^8.46.1",
     "@typescript-eslint/parser": "^8.46.1",
     "autoprefixer": "^10.4.21",
@@ -34,6 +35,7 @@
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "steamcommunity": "^3.49.0",
     "tailwindcss": "^4.1.14",
     "typescript": "^5.9.3"
   }
