--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "electron-serve": "^3.0.0",
-    "electron-store": "^8.2.0"
+    "electron-store": "^8.2.0",
+    "steam-user": "^5.2.3",
+    "steamcommunity": "^3.49.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
@@ -22,6 +24,7 @@
     "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "^24.8.1",
     "@types/react": "^19.2.2",
+    "@types/steam-user": "^5.1.0",
     "@types/steamcommunity": "^3.43.8",
     "@typescript-eslint/eslint-plugin": "^8.46.1",
     "@typescript-eslint/parser": "^8.46.1",
@@ -35,7 +38,6 @@
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "steamcommunity": "^3.49.0",
     "tailwindcss": "^4.1.14",
     "typescript": "^5.9.3"
   }
