--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "electron-serve": "^3.0.0",
     "electron-store": "^8.2.0",
+    "steam-totp": "^2.1.2",
     "steam-user": "^5.2.3",
     "steamcommunity": "^3.49.0",
     "steamid": "^2.1.0"
@@ -25,6 +26,7 @@
     "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "^24.8.1",
     "@types/react": "^19.2.2",
+    "@types/steam-totp": "^2.1.2",
     "@types/steam-user": "^5.1.0",
     "@types/steamcommunity": "^3.43.8",
     "@typescript-eslint/eslint-plugin": "^8.46.1",
