feat: implement auto-updater

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -24,6 +24,8 @@ mac:
   target:
     - target: dmg
       arch: [universal]
+    - target: zip
+      arch: [universal]
   icon: resources/icon.icns
   category: public.app-category.utilities
 
